--- a/src/Makefile
+++ b/src/Makefile
@@ -18,8 +18,8 @@ endif
 
 APP = $(ROOT)/build/graph
 LIB = s21_SmartCalc
+SRC_DIR=$(ROOT)/src
 OBJECTS = rpr/llist.o rpr/stack.o rpr/expr.o rpr/core.o
-
 SOURCES = $(OBJECTS:.o=.c)
 HEADERS = $(OBJECTS:.o=.h)
 
@@ -49,9 +49,12 @@ rpr/expr.o: rpr/expr.c rpr/expr.h
 rpr/core.o: rpr/core.c rpr/core.h
 	gcc $(CCOPTS) $(LDOPTS) -c rpr/core.c -o rpr/core.o
 
-test: tests/*.check $(LIB)
+$(TEST_C): tests/*.check
 	checkmk tests/*.check > $(TEST_C)
+
+test: $(TEST_C) $(LIB)
 	$(CC) $(CCOPTS) $(TEST_C) -o test.app $(LDOPTS) $(LIBS) -l$(LIB)
+	./$(TEST_APP)
 
 check: $(SOURCES)
 	cp $(ROOT)/materials/linters/CPPLINT.cfg ./
@@ -67,6 +70,7 @@ check2: $(SOURCES)
 
 clean:
 	rm -rf $(OBJECTS) $(OBJECTS:.o=.c.bak) $(APP) lib$(LIB).a $(TEST_APP) $(TEST_C)
+	rm -rf *.o $(TEST_APP) lib$(LIB).a $(OBJECTS) *.a *.gcno *.gcda *.gcov *.info
 
 rebuild: clean all
 
@@ -75,3 +79,15 @@ leaks: $(APP)
 
 leaks_test: test
 	$(LEAKS) ./$(TEST_APP) $(APP_ARGS)
+
+gcov_report: clean $(TEST_C)
+	$(CC) $(CCOPTS) --coverage -c $(SOURCES)
+	ar rc lib$(LIB).a *.o
+	$(CC) $(CCOPTS) $(TEST_C) -L./ -l$(LIB) $(LIBS) -lgcov -o $(TEST_APP)
+	$(CLEAN) $(OBJ)
+	-./$(TEST_APP)
+	gcov *.gcda
+	lcov -t "gcov_report" -o gcov_report.info -c -d .
+	[ -d $(ROOT)/src/report ] || mkdir $(ROOT)/src/report
+	genhtml -o $(ROOT)/src/report gcov_report.info
+	rm -rf *.o $(TEST_APP) lib$(LIB).a $(OBJECTS) *.a *.gcno *.gcda *.gcov *.info $(TEST_C)
